# rust-psa-crypto

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  ci.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  nightly.yml
psa-crypto/: Cargo.toml  README.md
psa-crypto-sys/: Cargo.toml  README.md  build-conf.toml  build.rs  extract-defines.py  list-includes.sh  setup_mbed_crypto.sh  xtensa.mk
psa-crypto-sys/patches/: 0001-Update-config-for-baremetal-targets.patch
psa-crypto-sys/src/: constants.rs  extras.rs  lib.rs  shim.rs  shim_methods.rs  types.rs
psa-crypto-sys/src/c/: shim.c  shim.h
psa-crypto-sys/src/mbedtls/: mod.rs  types.rs
psa-crypto/src/: lib.rs
psa-crypto/src/operations/: aead.rs  asym_encryption.rs  asym_signature.rs  cipher.rs  hash.rs  key_agreement.rs  key_derivation.rs  key_management.rs  mac.rs  message_digest.rs  mod.rs  other.rs
psa-crypto/src/types/: algorithm.rs  key.rs  key_derivation.rs  key_material.rs  mod.rs  status.rs
psa-crypto/tests/: aead.rs  hash.rs  key_agreement.rs  key_derivation.rs  mac.rs  mod.rs
src/: lib.rs
src/c/: shim.c  shim.h
