[package]
name = "psa-crypto-sys"
version = "0.10.1"
authors = ["Parsec Project Contributors"]
build = "build/build.rs"
edition = "2018"
description = "Wrapper around the PSA Cryptography API and MBEDTLS API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography", "mbedtls"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/AnimaGUS-minerva/rust-psa-crypto"
links = "mbedcrypto"

[build-dependencies]
bindgen = { version = "0.57.0", optional = true }
cc = "1.0.59"
cmake = "0.1.44"
walkdir = "2.3.1"

[features]
default = ["operations"]
static = []
interface = ["bindgen"]
operations = ["interface"]
