[package]
name = "psa-crypto-sys"
version = "0.10.1"
authors = ["Parsec Project Contributors"]
build = "build/build.rs"
edition = "2018"
description = "Wrapper around the PSA Cryptography API and MBEDTLS API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography", "mbedtls"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/AnimaGUS-minerva/rust-psa-crypto"
links = "mbedcrypto"

[dependencies]
cfg-if = "1.0.0"
libz-sys = { version = "1.0.0", optional = true }
libc = { version = "0.2.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.0" }

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.59"
cmake = "0.1.44"
walkdir = "2.3.1"
lazy_static = "1.4"
syn = { version = "1.0.64", features = ["full", "visit"] }
quote = "1.0.9"

[features]
default = ["std", "debug", "threading", "zlib", "time", "aesni", "padlock", "legacy_protocols", "operations"]
static = []
interface = []
operations = ["interface"]
minerva = []
# If you use mbedtls-sys in a no_std configuration, you need to provide your
# own versions of the following functions:
#
# * calloc/free
# * strstr/strlen/strncpy/strncmp/strcmp/snprintf
# * memmove/memcpy/memcmp/memset
# * rand/printf (used only for self tests. optionally use custom_printf)
std = ["debug"] # deprecated automatic enabling of debug, can be removed on major version bump
debug = []
custom_printf = []
custom_has_support = []
aes_alt = []
threading = []
time = []
havege = ["time"]
zlib = ["libz-sys"]
pkcs11 = []
aesni = []
padlock = []
legacy_protocols = []
mpi_force_c_code = []
trusted_cert_callback = []
# deprecated, needed for backcompat, can be removed on major version bump
custom_threading = ["threading"]
custom_time = ["time"]
custom_gmtime_r = ["time"]
# deprecated features, these don't do anything anymore, can be removed on major version bump
pthread = ["threading"]
