[package]
name = "psa-crypto-sys"
version = "0.12.0"
authors = ["Parsec Project Contributors"]
edition = "2018"
description = "Wrapper around the PSA Cryptography API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-psa-crypto"
rust-version = "1.66.0"

[build-dependencies]
bindgen = { version = "0.66.1", optional = true }
cc = "1.0.59"
cmake = "0.1.44"
regex = "1.9.1"
walkdir = "2.3.1"

[features]
default = ["operations"]
static = []
interface = ["bindgen"]
operations = ["interface"]
prefix = []
