[package]
name = "psa-crypto"
version = "0.4.0"
authors = ["Edmund Grimley Evans <edmund.grimley-evans@arm.com>",
           "Paul Howard <paul.howard@arm.com>",
           "Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
edition = "2018"
description = "Wrapper around the PSA Cryptography API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography", "no_std"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-psa-crypto"

[dependencies]
psa-crypto-sys = { path = "../psa-crypto-sys", version = "0.4.0", default-features = false }
log = "0.4.8"
serde = { version = "1.0.110", features = ["derive"] }
zeroize = { version = "1.1.0", features = ["zeroize_derive"] }
picky-asn1 = { version = "0.2.1", optional = true }
picky-asn1-der = { version = "0.2.1", optional = true }

[dev-dependencies]
rsa = "0.3.0"
rand = "0.7.3"
base64 = "0.12.3"

[features]
default = ["operations", "no-std"]
operations = ["psa-crypto-sys/operations", "interface"]
interface = ["psa-crypto-sys/interface"]
no-std = []
key-material-interface = ["picky-asn1", "picky-asn1-der"]
