[package]
name = "psa-crypto"
version = "0.9.2"
authors = ["Parsec Project Contributors"]
edition = "2018"
description = "Wrapper around the PSA Cryptography API"
readme = "README.md"
keywords = ["psa", "crypto", "cryptography", "no_std"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-psa-crypto"

[dependencies]
psa-crypto-sys = { path = "../psa-crypto-sys", version = "0.9.3", default-features = false }
log = "0.4.11"
serde = { version = "1.0.115", features = ["derive"] }
zeroize = { version = "1.4.3", features = ["zeroize_derive"] }

[dev-dependencies]
rsa = { version = "0.5.0", features = ["alloc"] }
rand = "0.8.4"
base64 = "0.12.3"

[features]
default = ["operations", "no-std"]
operations = ["psa-crypto-sys/operations", "interface"]
interface = ["psa-crypto-sys/interface"]
no-std = []
